hard-gists/6463966/run.log
=== Docker Run Log for 6463966 ===
Started at: Mi 29. Okt 16:32:32 CET 2025

[2025-10-29 16:32:32] START: Running container for 6463966
[2025-10-29 16:32:33] SUCCESS: Container 7500fb6f752940ae1be572ff4573c5bcc5197bed4e4f331464778518d2f474d7 started for 6463966
=== Container logs for 6463966 ===
  File "/snippet.py", line 41
    print "%-100s %-16s" % ("Path", "Size")
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6463966 ===
[2025-10-29 16:32:35] INFO: Container 7500fb6f752940ae1be572ff4573c5bcc5197bed4e4f331464778518d2f474d7 has stopped
